# SumanProject

./: Cargo.toml  README.md
src/: jwt_sign.rs  mail.rs  main.rs  models.rs  practice.rs  print.rs
src/api/: user_api.rs
src/models/: mod.rs  students_model.rs  user_model.rs
src/repository/: mongodb_repo.rs
