[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.9.2"
lettre_email = "0.9.2"
actix-web = "4"
serde = "1.0.126"
 
[dependencies.mongodb]
version = "2.0.0-beta.2"
default-features = false
features = ["sync"]