[package]
name = "Rust" 
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.9.2"
lettre_email = "0.9.2"
# actix-web = "4"
actix-rt = "1.0.0"
actix-web="4.0.0-beta.6"
serde = "1.0.127"
#  serde = { version = "1.0.104", feature = ["derive"]}
dotenv = "0.15.0"
config = "0.10.1"
# bcrypt = "0.4.0"
# block-cipher-trait = "0.7.0"
argon2rs = "0.2"
[dependencies.mongodb]
version = "2.0.0-beta.2"
default-features = false
features = ["sync"]