[package]
name = "actix-mongo-api"
version = "0.1.0"
authors = ["suman saurabh <sumansaurabh1106@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
lettre = "0.9.2"
lettre_email = "0.9.2"
jwt-simple = "0.10"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]

